correction der bugs partie 1